--- a/app/src/main/res/layout/activity_mobile_company.xml
+++ b/app/src/main/res/layout/activity_mobile_company.xml
@@ -5,5 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".acitivities.MobileCompanyActivity">
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclercompanymob"/>
 
 </android.support.constraint.ConstraintLayout>
