--- a/app/src/main/res/layout/activity_mobile_company.xml
+++ b/app/src/main/res/layout/activity_mobile_company.xml
@@ -5,9 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".acitivities.MobileCompanyActivity">
-    <android.support.v7.widget.RecyclerView
+
+    <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclercompanymob"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclercompanymob"
+        app:layout_constraintVertical_bias="1.0"
+        android:text="@string/choose_company_name"
+        android:textSize="13dp"
+        android:textStyle="bold"
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclercompanymob"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+         />
+
 
 </android.support.constraint.ConstraintLayout>
