--- a/app/src/main/res/layout/item_mobcompany.xml
+++ b/app/src/main/res/layout/item_mobcompany.xml
@@ -4,23 +4,23 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="10dp"
+    android:layout_margin="2dp"
     android:elevation="5dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imgcompanymobile_icon"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="3dp"
             android:layout_marginLeft="3dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            />
 
         <TextView
             android:id="@+id/txtmobilecompany_icon"
@@ -29,8 +29,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:textStyle="bold"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="12sp" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
