--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#25AAE3</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#fff</color>
+    <color name="black">#000000</color>
 </resources>
