--- a/app/src/main/res/layout/item_mobcompany.xml
+++ b/app/src/main/res/layout/item_mobcompany.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="2dp"
+    android:layout_margin="8dp"
     android:elevation="5dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,8 +19,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="3dp"
             android:layout_marginLeft="3dp"
-            android:layout_gravity="center_horizontal"
-            />
+            android:layout_gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/txtmobilecompany_icon"
