--- a/app/src/main/res/layout/activity_maintenance_center_details.xml
+++ b/app/src/main/res/layout/activity_maintenance_center_details.xml
@@ -4,125 +4,143 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="rtl"
     android:orientation="vertical"
+    android:textDirection="rtl"
     tools:context=".acitivities.MaintenanceCenterDetailsActivity">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_margin="8dp"
-    android:padding="5dp">
-    <TextView
-        android:layout_width="wrap_content"
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/name"
-        android:textSize="20dp"
-        android:layout_weight="0"
-        android:layout_margin="3dp"
-        android:padding="2dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_name_mcd"
-        android:textSize="20dp"
-        android:layout_weight="1"
-        android:layout_margin="3dp"
-        android:padding="2dp"/>
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@android:color/white">
+
+        <TextView
+            android:id="@+id/tv_name_mcd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+    </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/placeholder" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="0"
+            android:padding="2dp"
+            android:text="@string/address"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/tv_address_mcd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:padding="2dp"
+            android:textSize="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:padding="2dp"
+            android:text="@string/services"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/tv_services_mcd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:padding="2dp"
+            android:textSize="20dp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_radius"
+            android:padding="20dp"
+            android:text="الذهاب الى الموقع"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+
 </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="8dp"
-        android:padding="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/address"
-            android:textSize="20dp"
-            android:layout_weight="0"
-            android:layout_margin="3dp"
-            android:padding="2dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_address_mcd"
-            android:textSize="20dp"
-            android:layout_weight="1"
-            android:layout_margin="3dp"
-            android:padding="2dp"/>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="8dp"
-        android:padding="5dp">
-        <TextView
-            android:layout_width="wrap_content"
+    <!--
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/services"
-            android:textSize="20dp"
-            android:layout_weight="0"
-            android:layout_margin="3dp"
-            android:padding="2dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_services_mcd"
-            android:textSize="20dp"
-            android:layout_weight="1"
-            android:layout_margin="3dp"
-            android:padding="2dp"/>
-    </LinearLayout>
+            android:layout_margin="8dp"
+            android:orientation="horizontal"
+            android:padding="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="8dp"
-        android:padding="5dp">
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="0"
+                android:padding="2dp"
+                android:text="@string/latitude"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_lat_mcd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:padding="2dp"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/latitude"
-            android:textSize="20dp"
-            android:layout_weight="0"
-            android:layout_margin="3dp"
-            android:padding="2dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_lat_mcd"
-            android:textSize="20dp"
-            android:layout_weight="1"
-            android:layout_margin="3dp"
-            android:padding="2dp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="8dp"
-        android:padding="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/longitude"
-            android:textSize="20dp"
-            android:layout_weight="0"
-            android:layout_margin="3dp"
-            android:padding="2dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_lng_mcd"
-            android:textSize="20dp"
-            android:layout_weight="1"
-            android:layout_margin="3dp"
-            android:padding="2dp"/>
-    </LinearLayout>
+            android:layout_margin="8dp"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="0"
+                android:padding="2dp"
+                android:text="@string/longitude"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_lng_mcd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:padding="2dp"
+                android:textSize="20dp" />
 
 </LinearLayout>
