show price and save time in text view related to two Spinner in (MaintenaceRequestAppleActivity.java)

--- a/app/src/main/res/layout/activity_maintenance_center_details.xml
+++ b/app/src/main/res/layout/activity_maintenance_center_details.xml
@@ -84,7 +84,8 @@
             android:text="الذهاب الى الموقع"
             android:textColor="@color/white"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:id="@+id/btn_gotolocation"/>
     </LinearLayout>
 
 
