--- a/app/src/main/res/layout/activity_maintenance_request_apple.xml
+++ b/app/src/main/res/layout/activity_maintenance_request_apple.xml
@@ -184,6 +184,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:visibility="gone"
         android:id="@+id/progress_getdatalocation"/>
 
 </LinearLayout>
